compilateurDeca/src/test/deca/syntax/valid/objet/declarations_init_multiple.deca
// Description:
//    Déclaration de plusieurs champs sur une ligne et initialisation immédiate.
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 13/01/2026

class A {
    int x = 1, y = 2;
    protected float z;
}
{
}