compilateurDeca/src/test/deca/syntax/invalid/objet/semi.deca
// Description:
//   Déclaration de champ sans point-virgule.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A {
    int x
    float y;
}
{
}
